--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,101 @@
 <div class="ui app-root">
   <div class="ui inverted red fixed menu">
-    <a class="blue item doctor" routerLink="/dashboard"><i class="home icon"></i>Dashboard </a>
-    <a class="blue item" routerLink="/donate-blood"><i class="theme icon"></i>Donate Blood</a>
-    <a class="blue item admin" routerLink="/blood-bank"><i class="add circle icon"></i>Blood Banks</a>
+    <a class="blue item doctor" routerLink="/dashboard">
+      <i class="home icon"></i>Dashboard </a>
+    <a class="blue item" routerLink="/donate-blood">
+      <i class="theme icon"></i>Donate Blood</a>
+    <a class="blue item admin" routerLink="/blood-bank">
+      <i class="add circle icon"></i>Blood Banks</a>
     <a class="ui dropdown item">
-      <i class="hospital icon"></i>Blood Camps <i class="dropdown icon"></i>
+      <i class="hospital icon"></i>Blood Camps
+      <i class="dropdown icon"></i>
       <div class="menu">
-        <a class="item" routerLink="/remote"><i class="ambulance icon"></i>Remote Camps</a>
-        <a class="item" routerLink="/camps"><i class="hospital icon"></i>Fixed Camps</a>
+        <a class="item" routerLink="/remote">
+          <i class="ambulance icon"></i>Remote Camps</a>
+        <a class="item" routerLink="/camps">
+          <i class="hospital icon"></i>Fixed Camps</a>
       </div>
     </a>
-    <a class="blue item doctor" routerLink="/request"><i class="question circle icon"></i>Request Blood</a>
-    <a class="blue item doctor" routerLink="/donations"><i class="list icon"></i>Donations</a>
-    <a class="blue item Super_Admin" routerLink="/user-manager"><i class="user icon"></i>User Management</a>
-    <a class="blue item" routerLink="/about"><i class="info circle icon"></i>About</a>
+    <a class="blue item doctor" routerLink="/request">
+      <i class="question circle icon"></i>Request Blood</a>
+    <a class="blue item doctor" routerLink="/donations">
+      <i class="list icon"></i>Donations</a>
+    <a class="blue item admin Super_Admin" routerLink="/user-manager">
+      <i class="user icon"></i>User Management</a>
+    <a class="blue item" routerLink="/about">
+      <i class="info circle icon"></i>About</a>
 
     <a class="item right">
-        <i class="doctor icon big"></i>|&nbsp;
-        <a class="pointing ui dropdown dd">&#160; {{User.firstName}} {{User.lastName}}
-          <div class="menu hidden">
-            <div class="item" routerLink="/user-manager">Profile</div>
-            <div class="ui divider"></div>
-            <div class="item" (click)="logout()">Logout</div>
-          </div>
-        </a>
+      <i class="doctor icon big"></i>|&nbsp;
+      <a class="pointing ui dropdown dd">&#160; {{User.firstName}} {{User.lastName}}
+        <div class="menu hidden">
+          <div class="item" (click)='viewOne()'>Profile</div>
+          <div class="ui divider"></div>
+          <div class="item" (click)="logout()">Logout</div>
+        </div>
+      </a>
     </a>
   </div>
   <div class="ui">
-    <br/><br/>
+    <br/>
+    <br/>
     <router-outlet></router-outlet>
   </div>
+</div>
+
+<!-- ===== VIEW USER MODAL ___ -->
+<div class="ui dimmer page viewer">
+  <div class="content">
+
+    <div class="ui">
+      <div class="ui container">
+        <div class="content">
+          <div class="ui centered card large">
+            <div class="image">
+              <!-- <img src="/images/avatar2/large/kristy.png"> -->
+              <i class="massive icons">
+                <i class="address card outline red icon"></i>
+                <!-- <i class="top right corner zoom green tiny icon"></i> -->
+              </i>
+            </div>
+            <div class="content">
+              <a class="header">{{User.firstName}} {{User.lastName}}</a>
+              <br/>
+              <div class="meta">
+                <span class="date">Joined:
+                  <strong class='red'>{{ User.entry_date | date}}</strong>
+                </span>
+              </div>
+              <br/>
+              <div class="description">
+                <strong class='red'>{{User.firstName}}</strong> &nbsp; can &nbsp;
+                <strong class='blue'>{{ User.permissions || n/a}}</strong>
+              </div>
+            </div>
+            <div class="extra content">
+              <a>
+                <i class="mail icon blue"></i>
+                {{ User.email || n/a}}
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br/>
+      <br/>
+      <br/>
+      <br/>
+
+      <div class="ui animated circular button" (click)='closeDimmer(".ui.page.viewer")'>
+        <div class="hidden content red">Close</div>
+        <div class="visible content">
+          <i class="remove icon red"></i>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+  <!-- ===== VIEW USER MODAL ___ -->
+
 </div>
