--- a/src/app/donate-blood/donate-blood.component.html
+++ b/src/app/donate-blood/donate-blood.component.html
@@ -218,7 +218,7 @@
               </div>
 
 
-              <div class="four ui wide field">
+              <div class="four ui wide field required">
                 <label class="default text">Email</label>
                 <input type="email" formControlName="email" name="email">
               </div>
