--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <div class="ui app-root">
   <div class="ui inverted red fixed menu">
-    <a class="blue item doctor" routerLink="/dashboard">
+    <a class="blue item doctor no" routerLink="/dashboard" *ngIf='hideView("DashboardComponent")'>
       <i class="home icon"></i>Dashboard </a>
     <a class="blue item" routerLink="/donate-blood">
       <i class="theme icon"></i>Donate Blood</a>
-    <a class="blue item admin" routerLink="/blood-bank">
+    <a class="blue item admin no" routerLink="/blood-bank" *ngIf='hideView("BloodBankComponent")'>
       <i class="add circle icon"></i>Blood Banks</a>
     <a class="ui dropdown item">
       <i class="hospital icon"></i>Blood Camps
@@ -16,11 +16,11 @@
           <i class="hospital icon"></i>Fixed Camps</a>
       </div>
     </a>
-    <a class="blue item doctor" routerLink="/request">
+    <a class="blue item no" routerLink="/request" *ngIf='hideView("RequestComponent")'>
       <i class="question circle icon"></i>Request Blood</a>
-    <a class="blue item doctor" routerLink="/donations">
+    <a class="blue item no" routerLink="/donations">
       <i class="list icon"></i>Donations</a>
-    <a class="blue item" routerLink="/user-manager">
+    <a class="blue item no" routerLink="/user-manager" *ngIf='hideView("UserManagerComponent")'>
       <i class="user icon"></i>User Management</a>
     <a class="blue item" routerLink="/about">
       <i class="info circle icon"></i>About</a>
