--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -39,7 +39,7 @@
             Or
           </div>
           <div class="ui red">
-            <a routerLink="/donate-blood">Donate Blood <i class="signup icon"></i></a>
+            <a routerLink="/donate-blood" (click)='hideElements()'>Donate Blood <i class="signup icon"></i></a>
           </div>
         </div>
 
