right alligned button

--- a/src/app/request/request.component.html
+++ b/src/app/request/request.component.html
@@ -42,8 +42,8 @@
               </div>
             </div>
           </div>
-          <div class="actions">
-            <div class="ui green button" (click)='request(requestForm.value)'>Request</div>
+          <div class="ui right actions" style="margin-left: 85% !important;">
+            <div class="ui green button right" (click)='request(requestForm.value)'>Request</div>
           </div>
         </form>
       </div>
